--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
-    "vue": "^3.3.11"
+    "vue": "^3.3.11",
+    "vue-meta": "^2.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
